# hello-world.rs-mingw

./: .gitignore  BUILD_INSRUCTIONS.md  Cargo.toml  Makefile  PKGBUILD  README.md  build.rs  fix-deps.patch  hello-world.rs.exe.manifest  hello-world.rs.rc
.cargo/: config.toml
src/: main.rs
translations/: by.json  ru.json
