[package]
name    = "hello-world"
version = "0.1.0"
authors = ["mTvare6 <mTvare6@users.noreply.github.com>"]
edition = "2021"

[dependencies]
actix-web         = "4.4.0"
amethyst          = { version = "0.15.3", features = ["empty"] }
aseprite          = "0.1.3"
ash               = "0.37.3+1.3.251"
backtrace         = "0.3.69"
bytes             = "1.5.0"
cash              = "0.3.4"
chashmap          = "2.2.2"
chrono            = "0.4.31"
chrono-tz         = "0.8.4"
clap              = "4.4.7"
cookie            = "0.18.0"
cookie_store      = "0.20.0"
crate             = "0.0.2"
crossbeam         = "0.8.2"
crossterm         = "0.27.0"
crypto            = "0.5.1"
cssparser         = "0.33.0"
data-encoding     = "2.4.0"
data-url          = "0.3.0"
diesel            = "2.1.3"
diesel_migrations = "2.1.0"
distill           = "0.0.3"
dotenv            = "0.15.0"
fern              = "0.6.2"
fluent-bundle     = "0.15.2"
french-numbers    = "1.2.0"
fuck              = "0.0.0"
futures           = "0.3.29"
get-shell         = "0.1.0"
gfx               = "0.18.3"
gl                = "0.14.0"
glam              = "0.24.2"
glfw              = "0.53.0"
gtk               = "0.18.1"
handlebars        = "4.4.0"
html5ever         = "0.26.0"
hyper             = "0.14.27"
idna              = "0.4.0"
job_scheduler     = "1.2.1"
jsonwebtoken      = "9.1.0"
legion            = "0.4.0"
lettre            = "0.11.1"
libsqlite3-sys    = "0.26.0"
log               = "0.4.20"
markup            = "0.13.1"
markup5ever_rcdom = "0.2.0"
money             = "0.1.0"
mp4parse          = "0.17.0"
multipart         = "0.18.0"
nix               = "0.27.1"
nom               = "7.1.3"
num               = "0.4.1"
num_cpus          = "1.16.0"
num-derive        = "0.4.1"
num-traits        = "0.2.17"
once_cell         = "1.18.0"
openssl           = "0.10.57"
paste             = "1.0.14"
pico-args         = "0.5.0"
percent-encoding  = "2.3.0"
plist             = "1.5.1"
pretty_assertions = "1.4.0"
r_i18n            = "1.0.1"
rand              = "0.8.5"
regex             = "1.10.2"
reqwest           = "0.11.22"
ring              = "0.17.5"
rmpv              = "1.0.1"
safe-macro        = "0.1.0"
security          = "0.1.0"
serenity          = "0.11.7"
tensorflow        = "0.21.0"
u2f               = "0.2.0"
url               = "2.4.1"
uuid              = "1.5.0"
uwuify            = "0.2.2"
serde             = "1.0.190"
serde_json        = "1.0.108"
tempfile          = "3.8.1"
textwrap          = "0.16.0"
time              = "0.3.30"
tracing           = "0.1.40"
walkdir           = "2.4.0"
webauthn-rs       = "0.4.8"
webdriver         = "0.49.0"
winapi            = "0.3.9"
ws                = "0.9.2"
x11               = "2.21.0"
yubico            = "0.11.0"
